--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 .box1{
-    background-image: url('images/399967.jpg');
+    background-image: url('399967.jpg');
     width: 1100px;
     height: 733px;
     margin: auto;
